fixed people with no works on mobile

--- a/wp-content/themes/disrupt-theme/css/components/_graduate-single.scss
+++ b/wp-content/themes/disrupt-theme/css/components/_graduate-single.scss
@@ -19,6 +19,12 @@
       max-width: 45rem;
       border-radius: 100% !important;
       overflow: hidden;
+
+      @media (max-width: 500px) {
+        max-width: 30rem !important;
+        max-height: 30rem !important;
+      }
+
     }
 
     .image {
