--- a/wp-content/themes/disrupt-theme/css/components/_graduates.scss
+++ b/wp-content/themes/disrupt-theme/css/components/_graduates.scss
@@ -1,7 +1,7 @@
 /* GRADUATES
 ---------------------------------------------------------------------------------------------------- */
 body.page-graduates {
-  height: 13450px;
+  height: 12904px;
 }
 
 .graduates-introduction {
